--- a/Aufgabe_2.3.2/ende.html
+++ b/Aufgabe_2.3.2/ende.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
     <script src="script.js" defer></script>
-    <script src="data.json"></script>
+   
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokument</title>
@@ -10,11 +10,12 @@
     </head>
     <body id="ende">
         <header>
-          <h1>Kreire ein neues Tier!</h1>
+          <h1>Dein neues Tier!</h1>
         </header>
         <main>
             <div id=kopfButton></div>
-            <h2>Dein neues Tier:</h2>
+            <div id=antwortServer></div>
+            <p id="ausgabeNachricht"></p>
             <div id="Ergebnis">
             <div id="ergebnisKopf"></div>
             <div id="ergebnisKoerper"></div>
