--- a/Aufgabe_2.3.2/koerper.html
+++ b/Aufgabe_2.3.2/koerper.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
     <script src="script.js" defer></script>
-    <script src="data.json"></script>
+   
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokument</title>
@@ -10,9 +10,10 @@
     </head>
     <body id="koerperseite">
         <header>
-            <h1>2. Wähle einen Körper aus!</h1>
+            <h1>Kreiere ein neues Tier</h1>
         </header>
        <main>
+        <h2>2. Wähle einen Körper aus</h2>
         <div id="buttonWeiter"></div>
         <div id="buttonZurück"></div>
         <div class="container">
@@ -21,9 +22,9 @@
         <div id="koerperDiv2"></div>
         <div id="koerperDiv3"></div>
         
-        <div id="flex-box">
-        <div id="auswahlaktuell"></div>
-        <div id="auswahlaktuell2"></div>
+        <div id="flex-box2">
+        <div id="auswahlAktuell"></div>
+        <div id="auswahlAktuell2"></div>
     </div>
         </div>
 
