--- a/Aufgabe_2.3.2/kopf.html
+++ b/Aufgabe_2.3.2/kopf.html
@@ -2,7 +2,6 @@
 <html lang="de">
     <head>
     <script src="script.js" defer></script>
-    <script src="data.json"></script>
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokument</title>
@@ -10,10 +9,10 @@
     </head>
     <body id="kopfseite">
         <header>
-        
-            <h1>1. Wähle einen Kopf aus!</h1>
+            <h1>Kreiere ein neues Tier</h1>
         </header>
        <main>
+           <h2>1. Wähle einen Kopf aus</h2>
         <div class="container">
         <div id="buttonWeiter"></div>
         <div id="kopfDiv0"></div>
@@ -21,8 +20,8 @@
         <div id="kopfDiv2"></div>
         <div id="kopfDiv3"></div>
         </div>
-        <div id="flex-box">
-        <div id="auswahlaktuell"></div>
+        <div id="flex-box1">
+        <div id="auswahlAktuell"></div>
         </div>
        </main>
     </body>
