--- a/Aufgabe_2.3.2/beine.html
+++ b/Aufgabe_2.3.2/beine.html
@@ -2,7 +2,6 @@
 <html lang="de">
     <head>
     <script src="script.js" defer></script>
-    <script src="data.json"></script>
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokument</title>
@@ -10,21 +9,22 @@
     </head>
     <body id="beineseite">
         <header>
-            <h1>3. Wähle die Beine aus!</h1>
+            <h1>Kreiere ein neues Tier</h1>
         </header>
         <main>
+            <h2>3. Wähle die Beine aus</h2>
             <div id="buttonWeiter"></div>
             <div id="buttonZurück"></div>
-            <div class="container">
+            <div class="container3">
             <div id="beineDiv0"></div>
             <div id="beineDiv1"></div>
             <div id="beineDiv2"></div>
             <div id="beineDiv3"></div>
             </div>
-            <div id="flex-box">
-            <div id="auswahlaktuell"></div>
-            <div id="auswahlaktuell2"></div>
-            <div id="auswahlaktuell3"></div>
+            <div id="flex-box3">
+            <div id="auswahlAktuell"></div>
+            <div id="auswahlAktuell2"></div>
+            <div id="auswahlAktuell3"></div>
             </div>
         </main>
     </body>
