--- a/Aufgabe_2.3.2/ende.html
+++ b/Aufgabe_2.3.2/ende.html
@@ -13,7 +13,7 @@
           <h1>Dein neues Tier!</h1>
         </header>
         <main>
-            <div id=kopfButton></div>
+            <div id=wiederholen></div>
             <div id=antwortServer></div>
             <p id="ausgabeNachricht"></p>
             <div id="Ergebnis">
