--- a/Aufgabe_2.3.2/beine.html
+++ b/Aufgabe_2.3.2/beine.html
@@ -21,7 +21,7 @@
             <div id="beineDiv2"></div>
             <div id="beineDiv3"></div>
             </div>
-            <div id="flex-box3">
+            <div id="position3">
             <div id="auswahlAktuell"></div>
             <div id="auswahlAktuell2"></div>
             <div id="auswahlAktuell3"></div>
