--- a/Aufgabe_2.3.2/koerper.html
+++ b/Aufgabe_2.3.2/koerper.html
@@ -21,8 +21,7 @@
         <div id="koerperDiv1"></div>
         <div id="koerperDiv2"></div>
         <div id="koerperDiv3"></div>
-        
-        <div id="flex-box2">
+        <div id="position2">
         <div id="auswahlAktuell"></div>
         <div id="auswahlAktuell2"></div>
     </div>
