--- a/Aufgabe_2.3.2/kopf.html
+++ b/Aufgabe_2.3.2/kopf.html
@@ -20,7 +20,7 @@
         <div id="kopfDiv2"></div>
         <div id="kopfDiv3"></div>
         </div>
-        <div id="flex-box1">
+        <div id="position">
         <div id="auswahlAktuell"></div>
         </div>
        </main>
