--- a/Aufgabe_3.1/index.html
+++ b/Aufgabe_3.1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
+    <script src="script.js" defer></script>
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <title>Übung</title>
