--- a/Aufgabe_3.1/index.html
+++ b/Aufgabe_3.1/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
-    <script src="script.js" defer></script>
+    <script type="text/javascript" src="data.js" defer></script>
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <title>Übung</title>
     </head>
     <body>
         <header>
-          <h1>3_1 Vorlesung</h1>
+          <h1>Anmeldeformular</h1>
         </header>
+        
         <main>
-            <input name="fname">
-          <form method="POST" action="https://gis-example.herokuapp.com/">
-          <button type="submit">Abschicken</button></form>
+          <form method="GET" id="formular">
+            <label for="fname">Vorname</label>
+            <input type="text" name="fname"><br>
+
+            <label for="lname">Nachname</label>
+            <input type="text" name="lname"><br>
+
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="lname">Male</label><br>
+
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="lname">Female</label><br>
+
+
+            <button type="submit" id="button">Abschicken</button>
+          </form>
         </main>
     </body>
+    
 </html>
