--- a/Praktikumsaufgabe_3/logIn.html
+++ b/Praktikumsaufgabe_3/logIn.html
@@ -18,7 +18,7 @@
                 </table>   
               </nav>
     
-          <h1>Log In</h1>
+          <h1>Login</h1>
         </header>
         
         <main>
