form Element überprüfen

--- a/Praktikumsaufgabe_3/logIn.html
+++ b/Praktikumsaufgabe_3/logIn.html
@@ -12,8 +12,9 @@
             <nav>
                 <table>
                     <tr>
-                        <td><a  href="userDatenbank.html">User</a></td>
                         <td><a  href="index.html">Registrieren</a></td>
+                        <td><a  href="logIn.html">Login</a></td>
+                        <td><a  href="userDatenbank.html">User</a></td>
                     </tr>
                 </table>   
               </nav>
@@ -25,7 +26,7 @@
           <form name= "login" method="GET" id="logInFormular">
 
             <label for="email">E-mail:</label>
-            <input type="text" name="email" value=""><br>
+            <input type="email" name="email" id="email" value=""><br>
 
             <label for="passwort">Passwort:</label>
             <input type="password" id="passwort" name="passwort" required><br>
