--- a/Praktikumsaufgabe_3/userDatenbank.html
+++ b/Praktikumsaufgabe_3/userDatenbank.html
@@ -13,7 +13,8 @@
                 <table>
                     <tr>
                         <td><a  href="index.html">Registrieren</a></td>
-                        <td><a  href="logIn.html">LogIn</a></td>
+                        <td><a  href="logIn.html">Login</a></td>
+                        <td><a  href="userDatenbank.html">User</a></td>
                     </tr>
                 </table>   
               </nav>
