--- a/Prüfungsaufgabe/artikelverleih.html
+++ b/Prüfungsaufgabe/artikelverleih.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
-    <script type="text/javascript" src="data.js" defer></script>
+    <script src="data.js" defer></script>
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
@@ -11,12 +11,13 @@
       <div class="wrapper">
         <header>
           <h1>AstA-Artikelverleih</h1>
-          <p>Herzlich Wilkommen auf dem AstA-Verleih. Hier hast du einen Überblick über verschiedene Artikel, ob sie gerade frei, reserviert oder ausgeliehen wurden.</p>
+          <p>Herzlich Wilkommen auf der Website des AstA-Verleihs. Hier hast du einen Überblick über Artikel, die du ausleihen kannst.</p>
+
         </header>
         
         <main>
           <nav>
-            <button id="reservierenLink"><a href="reservierung.html">Reservierung abschließen</a></button>
+           <a href="reservierung.html" id="reservierenLink">Reservierung abschließen</a>
           </nav>
           <div>
             <p id="summe">Ausleihgebühr insgesamt:</p> 
