--- a/Prüfungsaufgabe/astaVerwaltung.html
+++ b/Prüfungsaufgabe/astaVerwaltung.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
-    <script type="text/javascript" src="verwaltung.js" defer></script>
+    <script src="verwaltung.js" defer></script>
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheetVerwaltung.css">
     <title>AstA-Verleih</title>
     </head>
     <body>
-        <div id="wrapper">
           <header>
             <h1>AstA-Verwaltung</h1>
           </header>
           <main>
             <div id="data"></div>
           </main>
-        </div>
     </body>
     
 </html>
